<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textColor="@color/black"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="60dp"/>
    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/btn_answer"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:backgroundTint="#00A000"/>

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/btn_answer"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:backgroundTint="#00A000"/>

    <Button
        android:id="@+id/answerBtn3"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/btn_answer"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:backgroundTint="#00A000"/>

    <Button
        android:id="@+id/answerBtn4"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/btn_answer"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:backgroundTint="#00A000"/>

</LinearLayout>
